css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-family: "Titillium Web", sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "Bangers", cursive;
  letter-spacing: 1px;
  margin-bottom: 15px;
}

.container {
  width: 880px;
  /* TB LR */
  margin: 0 auto;
}

/* header */

header {
  display: flex;
  align-content: flex-start;
}

header nav {
  display: flex;
  width: 691px;
  vertical-align: top;
  margin-top: 35px;
}

header nav a {
  margin-right: 65px;
  font-size: 14px;
  color: gray;
  text-decoration: none;
}

header nav a:hover {
  text-decoration: underline;
}

header nav a:first-child {
  margin-left: 0;
}

header nav a:last-child {
  margin-right: 0;
}

header .logo {
  margin-top: 25px;
}

/* cta */

.cta {
  display: flex;
  align-content: center;
}

.cta .cta-text {
  vertical-align: top;
  font-size: 77px;
  margin-top: 120px;
  text-align: center;
  padding: 0px 75px;
}

.cta .cta-text button {
  background: white;
  vertical-align: top;
  margin-top: 6px;
  padding: 8px 44px;
  font-size: 17px;
  border: 1px solid black;
  cursor: pointer;
}

.cta .cta-text button:hover {
  background: black;
  color: white;
}

.cta img {
  margin-top: 69px;
}

.main-content {
  border-top: 1px solid black;
  margin-top: 76px;
  padding-top: 39px;
}

.main-content .top-content {
  padding: 0 10px;
  display: flex;
}

.main-content .top-content .text-content {
  width: 410px;
  margin-right: 34px;
}

.main-content .top-content .text-content:last-child {
  margin-right: 0;
}

.main-content .middle-img {
  margin-top: 45px;
}

.main-content .bottom-content {
  display: flex;
  margin-top: 37px;
  padding: 0 10px;
}

.main-content .bottom-content .text-content {
  width: 275px;
  margin-right: 12px;
}

.main-content .bottom-content .text-content:last-child {
  margin-right: 0;
}

.contact {
  margin-top: 57px;
  border-top: 1px solid black;
  padding: 39px 10px 0;
}

.contact p {
  margin: 20px 0;
}

footer {
  margin: 32px 0;
  text-align: center;
  font-size: 14px;
}

/* Desktop fist responsive design */


/* Tablet max-width */
@media(max-width: 800px){
    .container {
        max-width: 800px;
        margin: 0 5%;
    }

    header {
        flex-direction: column;
    }
    
    header nav {
       width: 90%;
        order: 2;
    }

    header nav a {
        margin: auto;
    }

    .logo {
        display: block;
       
        margin: auto;
        order: -1;
    }

    .cta {
        display: block;
    }
    
    .cta img {
        display: none;
        
    }

    .top-content {
        width: 90%;
        margin: 5%;
    }

    .text-content {
       
    }

    .middle-img {
        width: 90%;
        margin: 5%;
    }

    .bottom-content {
        width: 90%;
        margin: 5%;
    }
}

/* Phone max-width */
@media(max-width: 500px){
  .container{
      max-width: 500px;
      margin: 0 5%;
  }

  header {
    flex-direction: column;
    align-items: center;
  }

  header nav {
    
    flex-direction: column;
    align-items: center;
    order: 2;
  }

  header nav a {
      margin: auto;
      padding: 10px;
      border-bottom: 1px solid black;
      align-content: center;
  }
 
  header nav a:first-child {
      margin: auto;
  }

  header nav a:last-child {
      margin: auto;
  }

  .logo {
    display: block;
    width: 20%;
    margin: auto;
      order: 1;

  }

  .top-content {
      flex-direction: column;
  }

  .top-content .text-content {
    width: 90%;
    margin: 20px 0px;

  }

  .bottom-content {
      flex-direction: column;
  }

  .bottom-content .text-content {
    width: 90%;
    margin: 20px 0px;
  }
}

